fixed bug where page doesn't fit if monitor is too big, changed body css to flex

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,10 @@
     font-family: "Roboto";
 }
 
+body {
+    display:flex;
+    flex-flow:column;
+}
   
 a {
     text-decoration: none;
